# TestingCodes

FinalTest/: FinalTest.cbp  FinalTest.depend  FinalTest.layout  main.cpp  run.sh
GPIO_trigger/: interrupt.sh
ImageTest/: CMakeLists.txt
ImageTest/dependencies/RaspiCamV2.0.0/src/: raspicam.cpp
ImageTest/dependencies/RaspiCamV2.0.0/src/private/: private_impl.h
ImageTest/src/: main  main.cpp  param.txt
ImageTest_LATEST/: param.txt
ImageTest_LATEST/dependencies/RaspiCamV2.0.0/: README
ImageTest_LATEST/dependencies/RaspiCamV2.0.0/src/: raspicam.h  raspicam_cv.cpp  raspicam_cv.h  raspicamtypes.h
ImageTest_LATEST/dependencies/RaspiCamV2.0.0/src/private/: fake_mmal_dependencies.cpp  private_impl.cpp  private_types.h
ImageTest_LATEST/dependencies/RaspiCamV2.0.0/utils/: raspicam_cv_test.cpp  raspicam_test.cpp
ImageTest_LATEST/src/: main  main.cpp  param.txt
